Tried to fix content area being cut off at certain sized for smaller screens.

--- a/wp-content/themes/sam-services/sass/navigation/_menus.scss
+++ b/wp-content/themes/sam-services/sass/navigation/_menus.scss
@@ -98,3 +98,7 @@
 	text-align: right;
 	width: 50%;
 }
+
+.navigation-tools {
+	@include clearfix;
+}
