--- a/wp-content/themes/sam-services/sass/site/_containers.scss
+++ b/wp-content/themes/sam-services/sass/site/_containers.scss
@@ -1,9 +1,17 @@
 // Using Bourbon Neat http://neat.bourbon.io
 
 #content {
+	@include clearfix;
 	@include outer-container;
-	// padding-right: 1%;
-	// padding-left: 1%;
+	@include breakpoint(medium) {
+		margin-top: 50px;
+	}
+	@include breakpoint(small) {
+		margin-top: 50px;
+	}
+	@include breakpoint(large) {
+		margin-top: 0;
+	}
 
 	#primary {
 		@include span-columns(12);
